assets/css/05-layout/_posts.scss
// ========================================================================
// PARTIALS/POST-ITEMS
// ========================================================================

.l-posts {
  display: grid;
  grid-template-rows: auto 1fr;
  color: white;

  &_count {
    background: $col-c;
  }

  &_posts {
    padding: spacer(3);
  }

  @include bp(10) {
    grid-template-columns: auto 1fr;

    &_count {
      padding-top: spacer(2);
    }
  }
}

